--- a/style.css
+++ b/style.css
@@ -8,21 +8,21 @@
     --card-title-border-color: #746615;
     --card-color-primary: #f7dd43;
     --card-bg-color: #1d1c19;
-    --bg: url(/assets/bg-yellow.svg);
+    --bg: url(./assets/bg-yellow.svg);
 }
 
 body.blue {
     --card-title-border-color: #338af3;
     --card-color-primary: #f7dd43;
     --card-bg-color: #202024;
-    --bg: url(/assets/bg-blue.svg);
+    --bg: url(./assets/bg-blue.svg);
 }
 
 body.green {
     --card-title-border-color: #047c3f;
     --card-color-primary: #f7dd43;
     --card-bg-color: #1a1f1b;
-    --bg: url(/assets/bg-green.svg);
+    --bg: url(./assets/bg-green.svg);
 }
 
 ul {
