--- a/style.css
+++ b/style.css
@@ -57,14 +57,16 @@ body * {
 
 nav {
     display: flex;
-    justify-content: left;
+    justify-content: right;
+    font-size: 12px;
+    padding-right: 250px;
 }
 
 #botao {
     display: flex;
     gap: 20px;
     margin-top: 20px;
-    padding: 10px 10px;
+    padding: 5px 10px;
     text-align: center;
     background: var(--card-bg-color);
     border-bottom: 2px solid var(--card-color-primary);
