--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,250 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-:root {
-    --card-title-border-color: #338af3;
-    --card-color-primary: #f7dd43;
-    --card-bg-color: #202024;
-    --bg: url(/assets/img/bg-blue.svg);
-}
-
-.yellow-mode {
-    --card-title-border-color: #746615;
-    --card-color-primary: #f7dd43;
-    --card-bg-color: #1d1c19;
-    --bg: url(/assets/img/bg-yellow.svg)
-}
-
-.blue-mode {
-    --card-title-border-color: #338af3;
-    --card-color-primary: #f7dd43;
-    --card-bg-color: #202024;
-    --bg: url(/assets/img/bg-blue.svg);
-}
-
-.green-mode {
-    --card-title-border-color: #047c3f;
-    --card-color-primary: #f7dd43;
-    --card-bg-color: #1a1f1b;
-    --bg: url(/assets/img/bg-green.svg);
-}
-
-ul {
-    list-style: none;
-}
-
 body {
-    background-color: #121214;
-    background-image: var(--bg);
-    background-repeat: no-repeat;
-    background-position: top center;
-    background-size: cover;
-}
-
-body * {
-    font-family: 'Roboto', sans-serif;
-}
-
-#app {
-    width: fit-content;
-    margin: auto;
-    padding-top: 52px;
-    cursor: default;
-}
-
-#botao {
-    display: flex;
-    gap: 20px;
-    margin-top: 20px;
-    padding: 5px 10px;
-    text-align: center;
-    background: var(--card-bg-color);
-    border-bottom: 2px solid var(--card-color-primary);
-    border-radius: 6px;
-}
-
-.btn1 {
-    text-transform: uppercase;
-    border: none;
-    background: none;
-    color: #e1e1e6;
-}
-
-.btn1:hover {
-    cursor: pointer;
-    color: #746615;
-    transform: translateY(-2.5px);
-}
-
-.btn2 {
-    text-transform: uppercase;
-    border: none;
-    background: none;
-    color: #e1e1e6;
-}
-
-.btn2:hover {
-    cursor: pointer;
-    color: #338af3;
-    transform: translateY(-2.5px);
-}
-
-.btn3 {
-    text-transform: uppercase;
-    border: none;
-    background: none;
-    color: #e1e1e6;
-}
-
-.btn3:hover {
-    cursor: pointer;
-    color: #047c3f;
-    transform: translateY(-2.5px);
-}
-
-header {
-    margin-bottom: 63px;
-    text-align: center;
-}
-
-#cards {
-    display: flex;
-    flex-direction: column;
-    gap: 32px;
-}
-
-details>summary {
-    list-style: none;
-    cursor: pointer;
-}
-
-.bandeiras {
-    width: 50px;
-    height: 51px;
-    transform: translate(0 0.818176);
-}
-
-.loser {
-    opacity: 0.1;
-}
-
-.score span {
-    color: #e1e1e6;
-    display: flex;
-    font-size: 18px;
-    opacity: 0.4;
-    justify-content: center;
-    padding-top: 10px;
-}
-
-.card {
-    padding: 32px 23px;
-    text-align: center;
-    background: var(--card-bg-color);
-    border-bottom: 2px solid var(--card-color-primary);
-    border-radius: 6px;
-    opacity: 0;
-    animation: appear .2s forwards;
-}
-
-.card h2 {
-    display: flex;
-    gap: 16px;
-    justify-content: center;
-    align-items: center;
-
-    padding: 8px 16px;
-    border: 2px solid var(--card-title-border-color);
-    border-radius: 6px;
-
-    width: fit-content;
-    margin: auto;
-    color: var(--card-color-primary);
-}
-
-.card h2 span {
-    color: #e1e1e6;
-    font-size: 14px;
-    text-transform: uppercase;
-}
-
-.card ul {
-    display: flex;
-    flex-direction: column;
-    /* Creating a space between each element. */
-    gap: 24px;
-
-    width: 270px;
-}
-
-.card ul li {
-    margin-top: 25px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-/* It's selecting the second `li` element in the `ul` element. */
-.card ul li+li {
-    padding-top: 24px;
-    border-top: 1px solid #323238;
-}
-
-.card ul li strong {
-    font-weight: 900;
-    font-size: 36px;
-    line-height: 125%;
-    color: #E1E1E6;
-}
-
-.card h2:hover,
-.card ul li strong:hover,
-.card ul li img:hover {
-    transform: scale(1.1);
-}
-
-.card h2,
-.card ul li strong,
-.card ul li img {
-    transition: transform 0.3s;
-}
-
-/* It's creating an animation. */
-@keyframes appear {
-    0% {
-        transform: translateY(-50px);
-        opacity: 0;
-    }
-
-    100% {
-        opacity: 1;
-    }
-}
-
-@media (min-width:700px) {
-
-    #cards {
-        max-width: 670px;
-        flex-direction: row;
-        flex-wrap: wrap;
-    }
-
-}
-
-@media (max-width:500px) {
-
-    #botao {
-        display: none;
-    }
-
-    :root {
-        --card-title-border-color: #047c3f;
-        --card-color-primary: #f7dd43;
-        --card-bg-color: #1a1f1b;
-        --bg: url(/assets/img/bg-green.svg);
-    }
-
+    background-color: #862c3e;
 }
